# talawachess

./: .clang-format  .gitignore  CMakeLists.txt  TalawaChess.bat  benchmark.sh  benchmark_results.csv  build_win.sh  debug.txt  debug_test  debug_test.cpp  run_tests.sh  speed_test.sh  test_moves  tests.txt
include/: Board.hpp  Bot.hpp  Coordinate.hpp  Evaluator.hpp  Move.hpp  MoveGenerator.hpp  Piece.hpp  UCI.hpp
src/: Bot.cpp  Evaluator.cpp  UCI.cpp  main.cpp
src/core/: Board.cpp  MoveGenerator.cpp
